--- a/landing_page/templates/landing_page/base.html
+++ b/landing_page/templates/landing_page/base.html
@@ -19,12 +19,12 @@
 				</div>
 			</a>
 			<nav class='navigation-bar'>
-				<div class='white-bar'>
-					<a href="#">Home</a>
-					<a href="#">News</a>
-					<a href="#">About</a>
-					<a href="#">Contact</a>	
-				</div>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">News</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>			
 			</nav>
 		</header>
 	</div>
