--- a/main_news/templates/main_news/main_news_app.html
+++ b/main_news/templates/main_news/main_news_app.html
@@ -1,42 +1,35 @@
 {% extends "landing_page/base.html" %}
 {% load static %}
 {% block content %}
-	<!-- <div class='publishers'>
-		{% for publish in publishers %}
-			<a href="{% url 'news-publisher' publish.publisher %}">{{ publish.publisher }}</a>
-		{% endfor %}
-	</div> -->
 	<div class='main_app_wrapper'>
+
 		<form action="{% url 'search-results' %}" method="get">
 			<input class='search' type="text" name="q" placeholder="Search for specific headlines & topics">
 		</form>
 
 
-		<form action="{% url 'news' %}" method="POST">
+		<!-- <form action="{% url 'news' %}" method="POST">
 			{% csrf_token %}
 			{{ form.as_p }}
 			<button type="submit" >Submit</button>
 		</form>
-
+ -->
 
 		<div class='news-grid-wrapper'>
+			<div class='subheader'>
+				<h1 class='news-page-title'>Your Feed</h1>
+				<h1 class=numb-items>{{ posts|length }}</h1>
+				<hr class='line-1'>
+			</div>
 			{%for post in posts%}
 				<div class='news-card'>
 					<img class='news-image' src="{{ post.image_url }}">
-					<div class='category'>
-						<h2 >{{ post.category }}</h2>
-					</div>
-					<div class='publisher'>
-						<h2>{{ post.publisher }}</h2>
-					</div>
 					<div class='card-content-wrapper'>
 						<h2 class="headline">{{ post.headline }}</h2>
+						<hr class='line-2'>
 						<h2 class="date">{{ post.date_published|date:"F d Y H:i e" }}</h2>
-
-						
+						<h2 class='category'> {{post.category}} </h2>
 						<p class="description">{{ post.description }}</p>
-						<!-- <a href="{{ post.link }}"><img class='play-arrow' src="{% static 'main_news/play-arrow.png' %}"></a>
-						<a class='hyper-text' href="{{ post.link }}">Find out more</a> -->
 					</div>
 				</div>
 			{%endfor%}
