--- a/static/main2.css
+++ b/static/main2.css
@@ -13,9 +13,10 @@ html {
 }
 
 body {
-	width: 100%;	
+	width: 100%;
 	position: absolute;
-	background-color: #fff ; 
+	background-image: url(landing_page/background.png);
+	background-color: #D16141 ; 
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -26,54 +27,25 @@ body {
 /*----------------------- Page Header -----------------------*/
 
 header {
+	margin-top:20px;
+	margin-left: 65px;
+	margin-right: 65px;
 	display: flex;
-
-}
-
-.main-header{
+	align-items: center;
 	background-color: #CF5B46;
-
 }
 
 nav {
-	float: right;
+	float:right;
 	margin-left: auto;
 	position: relative;
-	text-align: center;
-	padding-bottom: 0.8em;
-	padding-top: 0.7em;
-	padding-right: 2em;
 }
 
-ul {
-	list-style-type: none;
-	padding: 0:
-	margin: 0;
-	display: inline-block;
-}
-
-li{
-	display: inline-block;
-	text-align: center;
-	padding: 0.5em 2.9em 0.5em 2.9em;
-
-}
-
-a {
-	display: block;
-	text-align: center;
-	text-decoration: none;
-	font-size: 0.6em;
-	font-family: 'Rubik';
-	font-weight: bold;
-	text-transform: uppercase;
-	font-weight: 500;
-	color: #fff;
-}
 
 .header-logo {
-	padding: 0:
-	margin: 0;
+	max-width: 250px ;
+	max-height: 60px;
+
 }
 
 .logo-name {
@@ -84,16 +56,14 @@ a {
 	display: inline-block;
 	vertical-align: middle;
 	line-height: 115%;
-	display: none;
 }
 
 .logo img {
-	padding-left: 0.8em;
-	padding-top: 0.6em;
-	width: auto;
-	max-width: 4.5em;
+	padding: 0px;
+	width: 25%;
 	height: auto;
 	display: inline-block;
+	vertical-align: middle;
 }
 
 .logo-name {
@@ -101,10 +71,30 @@ a {
 }
 
 
-.navigation-bar li:hover {
-	background-color: rgba(256, 256, 256, 0.09);
-	border-radius: 1rem;
+.white-bar {
+	position: relative;
+	font-size: 0.7em;
+	font-family: 'Rubik';
+	font-weight: bold;
+	border-radius: 10px;
+	text-transform: uppercase;
+	font-weight: 500;
+}
+
+
+.navigation-bar a {
+	position: relative;
+	top: -0.5rem;
+	text-decoration: none;
+	color: #fff;
+	display: inline-block;
+	padding: 0.8em 4em;
 	transition: 0.2s ease-in-out;
+}
+
+.navigation-bar a:hover {
+	background-color: rgba(0, 0, 0, 0.07);
+	border-radius: 2rem;
 }
 
 /*----------------------- Main Landing Page -----------------------*/
@@ -285,73 +275,190 @@ a {
 
 
 
+
+
 /*----------------------- Main News Page -----------------------*/
-
-.subheader {
-	margin-top: 7em;
-	margin-bottom: 3em;
+/*
+.news-grid-wrapper {
+	display: grid;
+	grid-template-columns: repeat(4, 300px);
+	grid-auto-rows: auto;
+	grid-gap: 2rem;
+	justify-content: center;
 }
 
-.news-page-title {
-	display: inline-flex;
-	color: #403735;
-	font-family: 'Rubik', sans-serif;
-	font-size: 2em;
-	text-transform: uppercase;
-	padding-bottom: 0.6em;	
+.news-card {
+	display: inline-block;
+	background-color: #FBFAF9;
+	width: 300px;
+	width: 18.5em;
+	height: 500px;
+	border-radius: 10px;
+	box-shadow: 0px 5px 6px rgba(0,0,0,0.25);
 }
 
-.numb-items {
-	display: inline-flex;
-	font-family: 'Rubik', sans-serif;
-	font-size: 1.4em;
-	font-weight: 300;
-	padding-left: 1em;
-	vertical-align: middle;
-	padding-bottom: 0.6em;	
+.news-image {
+	max-height: auto;
+	max-width: 18.5em;
+	border-radius: 10px 10px 0px 0px;
 }
 
-.line-1 {
-	border: 0;
-	clear: both;
-	display: block;
-	width: auto;               
-	background-color: #DCDCDC;
-	height: 0.1em;
+
+.category {
+	position: relative;
+	top: -23px;
+	display: inline-block;
+	color: #fff;
+	font-weight: bold;
+	background: rgb(133,14,97);
+	background: linear-gradient(117deg, rgba(133,14,97,1) 0%, rgba(236,122,60,1) 100%);
+	width: 150px;
+	height: 28px;
+	border-radius: 22px;
+	margin-left: 170px; 
+	box-shadow: 0px 3px 6px rgba(0,0,0,0.4);
 }
+
+.category h2 {
+	position: absolute;
+	font-size: 0.65em;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    letter-spacing: 1.1px;
+}
+
+.publisher {
+	position: relative;
+	top: -23px;
+	display: inline-block;
+	color: #fff;
+	font-weight: bold;
+	background: rgb(133,14,97);
+	background: linear-gradient(117deg, rgba(133,14,97,1) 0%, rgba(236,122,60,1) 100%);
+	width: 150px;
+	height: 28px;
+	border-radius: 22px;
+	margin-left: 170px; 
+	box-shadow: 0px 3px 6px rgba(0,0,0,0.4);
+}
+
+.publisher h2 {
+	position: absolute;
+	font-size: 0.65em;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    letter-spacing: 1.1px;
+}
+
+.card-content-wrapper {
+	position: relative;
+	margin-left: 20px;
+	margin-right: 20px;
+	top:-48px;
+}
+
+.date {
+	position: relative;
+	font-size: 0.8em;
+	font-weight: lighter;
+	color: #707070;
+	max-width: 10em;
+}
+
+.headline {
+	position: relative;
+	top: 20px;
+	max-width: 15em;
+	color: #3B3B3B;
+}
+
+.description {
+	position: relative;
+	top:30px;
+	color: #444444;
+	font-weight: lighter;
+	font-size: 0.8em;
+}
+
+
+.play-arrow {
+	position: absolute;
+	height: auto;
+	width: 30px;
+	top: 265px;
+}
+
+.hyper-text {
+	position: absolute;
+	text-decoration: none;
+	color: #E4723E;
+	font-weight: bold;
+	top: 272px;
+	margin-left: 45px;
+}*/
 
 .main_app_wrapper {
 	overflow: hidden;
 	background-color: #fff;
 	margin-left: 2em;
 	margin-right: 2em;
-	height: auto;
+	height: 110em;
+	margin-top: 4em;
 	border-radius: 1em;
 }
 
 .news-grid-wrapper {
 	height: auto;	
-	margin-left: 12em;
-
-	margin-right: 18em;
+	margin-left: 18em;
+	margin-top: 3em;
+	margin-right: 4em;
 }
 
 .news-card {
-	background-color: #FCFCFC;
+	background-color: #F6F6F6;
 	width: auto;
-	height: 10em;
-	border-radius: 0.3em;
-	box-shadow: 0px 0.2em 0.7em rgba(0,0,0,0.14);
-	margin-bottom: 1em;
+	height: 9em;
+	border-radius: 0.7em;
+	box-shadow: 0px 5px 8px rgba(0,0,0,0.12);
+	margin-top: 1.5em;	
 }
 
-.news-image {	
-	position: absolute;	
-	height: 10em;
-	max-width: 16.5em;
-	border-radius: 0.3em 0em 0em 0.3em;
+.news-image {
+	height: 9em;
+	max-width: 14.5em;
+	border-radius: 0.7em 0em 0em 0.7em;
 }
 
+
+.category {
+	top: -7.5em;
+	position: relative;
+	background: rgb(133,14,97);
+	background: linear-gradient(117deg, rgba(133,14,97,1) 0%, rgba(236,122,60,1) 100%);
+	width: 6em;
+	height: 3em;
+	border-radius: 0.7em;
+	margin-left: 47em; 
+	box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
+}
+
+
+.publisher {
+	top: -7.5em;
+	position: relative;
+	background: rgb(133,14,97);
+	background: linear-gradient(117deg, rgba(133,14,97,1) 0%, rgba(236,122,60,1) 100%);
+	width: 6em;
+	height: 3em;
+	border-radius: 0.7em;
+	margin-left: 47em; 
+	margin-top: 0.7em;
+	box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
+}
 
 .publisher h2, .category h2 {
 	font-weight: bold;
@@ -371,67 +478,36 @@ a {
 
 .card-content-wrapper {	
 	position: relative;
-	padding: 0;
-	margin-left: 17.5em;
-	padding-right: 4em;
-	padding-top: 1.0em;
+	top: -15em;
+	margin-left: 15.5em;
+	margin-right: 6em;	
 }
 
 .headline {
 	position: relative;
-	padding: 0;
-	margin: 0;
 	color: #3B3B3B;
-	font-size: 1.0em;
+	font-size: 0.9em;
 	font-weight: bold;
-	font-family: 'Rubik', sans-serif;
-	padding-bottom: 0.5em;
-	width: auto;
-
-}
-
-.line-2 {
-	border: 0;
-	clear: both;
-	display: block;
-	width: auto;               
-	background-color: #686868;
-	height: 0.09em;
-	margin-bottom: 0.5em;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .date {
 	position: relative;
-	display: inline;
 	font-size: 0.7em;
-	font-weight: 500;
-	color: #EC7A3C;
+	font-weight: lighter;
+	color: #707070;
 	max-width: 14em;
-	padding-bottom: 0;
-	font-family: "Rubik", sans-serif;
-}
-
-.category {
-	display: inline;
-	font-size: 0.7em;
-	font-weight: 500;
-	color: #EC7A3C;
-	max-width: 14em;
-	padding-top: 0.7em;
-	padding-bottom: 0;
-	margin-left: 3em;
-	font-family: "Rubik", sans-serif;
+	padding-top: 0.5em;
+	font-family: "Montserrat", sans-serif;
 }
 
 .description {
-	padding-top: 0.3em;	
-	width: 44em;
+	padding-top: 1em;	
 	position: relative;
 	color: #444444;
-	font-weight: 400;
-	font-size: 0.73em;
-	font-family: "Rubik", sans-serif;
-	width: auto;
+	font-weight: lighter;
+	font-size: 0.67em;
+	font-family: "Montserrat", sans-serif;
 }
 
 .search {
@@ -452,7 +528,6 @@ a {
 }
 
 .search[type=text] {
-	display: none;
 	color: #3B3B3B;
 	padding-left: 2em;
 	font-size: 0.8em;
