--- a/static/main.css
+++ b/static/main.css
@@ -47,7 +47,7 @@ nav {
 
 ul {
 	list-style-type: none;
-	padding: 0:
+	padding: 0;
 	margin: 0;
 	display: inline-block;
 }
@@ -72,7 +72,7 @@ a {
 }
 
 .header-logo {
-	padding: 0:
+	padding: 0;
 	margin: 0;
 }
 
@@ -332,8 +332,8 @@ a {
 .news-grid-wrapper {
 	height: auto;	
 	margin-left: 12em;
-
 	margin-right: 18em;
+	max-width: 67em;
 }
 
 .news-card {
@@ -342,7 +342,7 @@ a {
 	height: 10em;
 	border-radius: 0.3em;
 	box-shadow: 0px 0.2em 0.7em rgba(0,0,0,0.14);
-	margin-bottom: 1em;
+	margin-bottom: 1.5em;
 }
 
 .news-image {	
@@ -351,7 +351,6 @@ a {
 	max-width: 16.5em;
 	border-radius: 0.3em 0em 0em 0.3em;
 }
-
 
 .publisher h2, .category h2 {
 	font-weight: bold;
@@ -368,7 +367,6 @@ a {
     font-family: "Montserrat", sans-serif;
 }
 
-
 .card-content-wrapper {	
 	position: relative;
 	padding: 0;
@@ -382,9 +380,9 @@ a {
 	padding: 0;
 	margin: 0;
 	color: #3B3B3B;
-	font-size: 1.0em;
+	font-size: 1.1em;
 	font-weight: bold;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Montserrat', sans-serif;
 	padding-bottom: 0.5em;
 	width: auto;
 
@@ -429,8 +427,8 @@ a {
 	position: relative;
 	color: #444444;
 	font-weight: 400;
-	font-size: 0.73em;
-	font-family: "Rubik", sans-serif;
+	font-size: 0.8em;
+	font-family:"Rubik", sans-serif;
 	width: auto;
 }
 
@@ -475,4 +473,9 @@ a {
 
 ::-ms-input-placeholder { /* Microsoft Edge */
 	color: #BFBFBF;
+}
+
+.temp {
+	width: 10em;
+	height:  3em;
 }
